Fixed text input on mobile; the -webkit-user-select option didn't work on Safari or Chrome mobile.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -29,8 +29,6 @@ $break-small: 550px;
 	}
 }
 
-* { -webkit-user-select: none !important; user-select: none !important; }
-
 html{ background: #f2f2f2; line-height: 1.4em; }
 
 body{
